# armada

./: .gitignore  Cargo.toml  README.md  build.rs
api/: starknet_api_openrpc.json  starknet_trace_api_openrpc.json  starknet_write_api.json
doc/: design-doc.md  ideas.md  p2p.md  problems.md  results.md
etc/: 67157-state.json  793846-block.json  805543-block.json  805543-state-update.json  805543.json  805543.patched.json  class.json  ethereum-latest.json  latest.json  pending.json  tx.json
src/: api.rs  arg.rs  cfg.rs  ctx.rs  db.rs  eth.rs  lib.rs  rpc.rs  seq.rs  sync.rs  util.rs
tests/: json.rs  rpc.rs  sync.rs
tests/common/: eth.rs  mod.rs  seq.rs
