[package]
name = "armada"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "armada"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.6"
tokio = { version = "1.25", features = ["full"] }
once_cell = "1.17"
regex = "1.7"
reqwest = { version = "0.11", features = ["json", "blocking"] }
dotenv = "0.15.0"
iamgroot = { version = "0.1", features = ["anyhow"] }
log = "0.4.17"
env_logger = "0.10.0"
anyhow = "1.0.71"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3.28"
async-trait = "0.1.68"
keccak-hash = "0.10.0"
hex = "0.4.3"
serde-tuple-vec-map = "1.0.1"
yakvdb = "0.6.0"

[dev-dependencies]
tempdir = "0.3"
uuid = { version = "1.3.3", features = ["v4"] }

[build-dependencies]
iamgroot = { version = "0.1", features = ["anyhow"] }
